# NexBackend

./: .gitignore  Caddyfile  Dockerfile  PRD_Agentic_Backend.md  README.md  docker-compose.yml  gunicorn_conf.py  livekit.yaml  models.yml  pyproject.toml  test_nex_endpoints.py
app/: __init__.py  agent.py  api_gateway.py  archive_service.py  asr.py  auth.py  auth_service.py  cognition.py  event_streamer.py  livekit_token.py  llm_runtime.py  logging_config.py  main.py  memory_engine.py  memory_graph.py  memory_service.py  models.py  nex_agent_llm.py  nex_service.py  orchestrator.py  prompts.py  services.py  session_manager.py  session_service.py  test_client.py  user_service.py
app/routers/: auth.py  memory.py  nex.py  payment.py  session.py  subscription.py
tests/: verify_session_flow.py
