[tool.poetry]
name = "nex-backend"
version = "0.1.0"
description = ""
authors = ["AnvanshSingh <anvansh.singh@esmagico.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
websockets = "^16.0"
pydantic = "^2.12.5"
python-dotenv = "^1.2.1"
pyjwt = "^2.10.1"
loguru = "^0.7.3"
uvloop = "^0.22.1"
locust = "^2.43.1"
google-generativeai = "^0.8.6"
livekit = "^0.18.2"
livekit-agents = "^0.12.9"
livekit-plugins-google = "^0.7.3"
livekit-plugins-openai = "^0.10.1"
pymilvus = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
